GNOME Bugzilla – Bug 608077
doesn't report its sound capability when built with sound support
Last modified: 2010-06-24 04:25:07 UTC
from http://trac.galago-project.org/ticket/187 "According to spec (http://www.galago-project.org/specs/notification/0.9/x408.html#command-get-capabilities) GetCapabilities? should have sound . But notification daemon misses it. I'll be attaching a patch to fix the issue." Patch http://trac.galago-project.org/attachment/ticket/187/notification-daemon-0.4.0-report-sound-capability.patch
Created attachment 152257 [details] [review] report sound capability
Created attachment 152258 [details] [review] real patch
Created attachment 164466 [details] [review] Clean up notify_daemon_get_capabilities() Using a GPtrArray, rather than incrementing by hand.
Created attachment 164467 [details] [review] Advertise the "sound" capability As per specification.
Pushed. Thanks.