Clean up notify_daemon_get_capabilities()

Using a GPtrArray, rather than incrementing by hand.

https://bugzilla.gnome.org/show_bug.cgi?id=608077